# SimpleSATSolver

./: CMakeLists copy.txt  CMakeLists.txt  README.md  main.cc  parser.cc  parser.h  sample-helper-tseitin  sample-pa2  satSolver.cc  satSolver.h  test.cpp  tokenizer.cc  tokenizer.h  treeNode.cc  treeNode.h  tseitinTransformer.cc  tseitinTransformer.h  user.yml
test/: test0.in  test0.out
